feat: 将文件大小限制从4MB增加到20MB
- 支持毕业论文等大文件（最大20MB）
- 更新后端文件大小检查（documents.py, templates.py）
- 更新前端文件大小检查（index.html）
- 更新vercel.json配置（maxRequestSize: 20mb）
- 更新文档说明（文件大小限制说明.md）
- 注意：Vercel Hobby计划最大支持4.5MB，Pro计划可通过配置支持20MB

--- a/文件大小限制说明.md
+++ b/文件大小限制说明.md
@@ -67,14 +67,28 @@ Word 文档中的图片通常是文件过大的主要原因。
 
 ## 🔧 技术实现
 
+### Vercel 配置
+
+在 `vercel.json` 中配置请求体大小限制：
+
+```json
+{
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 30,
+      "maxRequestSize": "20mb"
+    }
+  }
+}
+```
+
 ### 后端检查
 
 在 `backend/app/api/documents.py` 和 `backend/app/api/templates.py` 中：
 
 ```python
-# Vercel 请求体大小限制：4.5 MB
-# 为了安全，我们设置 4 MB 的限制
-MAX_FILE_SIZE = 4 * 1024 * 1024  # 4 MB
+# 文件大小限制：20 MB（支持毕业论文等大文件）
+MAX_FILE_SIZE = 20 * 1024 * 1024  # 20 MB
 
 # 检查文件大小
 if file.size and file.size > MAX_FILE_SIZE:
@@ -91,13 +105,13 @@ if file.size and file.size > MAX_FILE_SIZE:
 在前端上传前也会检查文件大小，提前提示用户：
 
 ```javascript
-// 文件大小限制：4 MB（Vercel 限制）
-const MAX_FILE_SIZE = 4 * 1024 * 1024; // 4 MB
+// 文件大小限制：20 MB（支持毕业论文等大文件）
+const MAX_FILE_SIZE = 20 * 1024 * 1024; // 20 MB
 
 // 检查文件大小
 if (file.size > MAX_FILE_SIZE) {
   const fileSizeMB = (file.size / (1024 * 1024)).toFixed(2);
-  showMessage(documentStatus, `文件太大（${fileSizeMB} MB），最大支持 4 MB。请压缩文档中的图片或删除不必要的图片后再上传。`, true);
+  showMessage(documentStatus, `文件太大（${fileSizeMB} MB），最大支持 20 MB。请压缩文档中的图片或删除不必要的图片后再上传。`, true);
   return;
 }
 ```
@@ -108,8 +122,8 @@ if (file.size > MAX_FILE_SIZE) {
 
 上传文件前，请确认：
 
-- [ ] **文件大小 ≤ 4 MB**
-- [ ] **已压缩文档中的图片**
+- [ ] **文件大小 ≤ 20 MB**
+- [ ] **已压缩文档中的图片**（如果文件仍然很大）
 - [ ] **已删除不必要的图片**
 - [ ] **文档格式为 .docx**
 
@@ -121,19 +135,28 @@ if (file.size > MAX_FILE_SIZE) {
 
 1. **右键点击文件** → **"属性"** 或 **"显示简介"**
 2. **查看文件大小**
-3. **如果超过 4 MB**，按照上述方法压缩
+3. **如果超过 20 MB**，按照上述方法压缩
 
 ### 常见问题
 
-**Q: 为什么限制是 4 MB？**
+**Q: 为什么限制是 20 MB？**
 
-**A**: 这是 Vercel Serverless Functions 的限制。Vercel 免费和 Pro 计划的请求体大小限制是 4.5 MB，我们设置 4 MB 是为了留出安全余量。
+**A**: 为了支持毕业论文等大文件。毕业论文通常包含大量图片和内容，可能达到 10-20 MB。
 
-**Q: 可以增加限制吗？**
+**Q: 如果使用 Vercel，可以支持 20 MB 吗？**
 
-**A**: 不能。这是 Vercel 平台的限制，无法通过代码修改。如果需要上传更大的文件，需要：
-- 升级到 Vercel Enterprise 计划（需要联系 Vercel 销售）
-- 或使用其他方案（如直接上传到对象存储）
+**A**: 
+- **Hobby 计划**：最大只能支持 4.5 MB（平台限制）
+- **Pro 计划**：可以通过 `vercel.json` 配置 `maxRequestSize: "20mb"` 来支持 20 MB
+- **Enterprise 计划**：可以配置更大的限制（根据合同）
+
+**Q: 如果超过 20 MB 怎么办？**
+
+**A**: 
+- 压缩文档中的图片（最有效的方法）
+- 删除不必要的图片
+- 考虑拆分文档分别处理
+- 或升级到支持更大文件的部署方案
 
 **Q: 压缩图片会影响质量吗？**
 
@@ -152,10 +175,11 @@ if (file.size > MAX_FILE_SIZE) {
 
 ## 📝 总结
 
-- ✅ **限制**：4 MB（Vercel 限制）
+- ✅ **限制**：20 MB（支持毕业论文等大文件）
 - ✅ **检查**：前端和后端都会检查
 - ✅ **提示**：会显示友好的错误信息
-- ✅ **建议**：压缩图片是最有效的解决方案
+- ✅ **建议**：如果文件仍然很大，压缩图片是最有效的解决方案
+- ⚠️ **注意**：如果使用 Vercel Hobby 计划，最大只能支持 4.5 MB
 
 **如果遇到文件大小问题，请先压缩文档中的图片！**
 
