fix: 修复vercel.json配置错误并更新所有相关文档
- 移除vercel.json中无效的maxRequestSize配置（Vercel不支持此配置）
- 更新所有文档中关于maxRequestSize的错误说明
- 添加参考文献处理的异常捕获
- 标题不修改行距，只有正文应用20磅行距
- 参考文献提示改为在文本后添加（本篇文献没在正文中应用）

--- a/文件大小限制说明.md
+++ b/文件大小限制说明.md
@@ -69,18 +69,21 @@ Word 文档中的图片通常是文件过大的主要原因。
 
 ### Vercel 配置
 
-在 `vercel.json` 中配置请求体大小限制：
+**注意**：Vercel **不支持**通过 `vercel.json` 配置 `maxRequestSize`。请求体大小限制是平台级别的，无法通过配置文件修改。
+
+`vercel.json` 配置示例：
 
 ```json
 {
   "functions": {
     "api/index.py": {
-      "maxDuration": 30,
-      "maxRequestSize": "20mb"
+      "maxDuration": 30
     }
   }
 }
 ```
+
+**重要**：Vercel 的请求体大小限制（4.5MB）是平台限制，无法通过代码或配置修改。
 
 ### 后端检查
 
@@ -147,7 +150,7 @@ if (file.size > MAX_FILE_SIZE) {
 
 **A**: 
 - **Hobby 计划**：最大只能支持 4.5 MB（平台限制）
-- **Pro 计划**：可以通过 `vercel.json` 配置 `maxRequestSize: "20mb"` 来支持 20 MB
+- **Pro 计划**：4.5 MB（无法通过配置文件修改）
 - **Enterprise 计划**：可以配置更大的限制（根据合同）
 
 **Q: 如果超过 20 MB 怎么办？**
