--- a/部署失败排查指南.md
+++ b/部署失败排查指南.md
@@ -43,12 +43,13 @@ python3 -c "import sys; sys.path.insert(0, 'backend'); from app.services.thesis_
 {
   "functions": {
     "api/index.py": {
-      "maxDuration": 30,
-      "maxRequestSize": "20mb"
+      "maxDuration": 30
     }
   }
 }
 ```
+
+**注意**：Vercel **不支持**通过 `vercel.json` 配置 `maxRequestSize`。请求体大小限制是平台级别的，无法通过配置文件修改。
 
 ### 5. 环境变量问题
 
