修复：添加 university_id 参数支持

--- a/阿里云服务器部署说明.md
+++ b/阿里云服务器部署说明.md
@@ -152,7 +152,7 @@ sudo apt install git build-essential -y
 ```bash
 # 克隆代码
 cd /var/www
-sudo git clone https://github.com/your-username/geshixiugai.git
+sudo git clone https://github.com/jet20002025-hash/geshixiugai.git geshixiugai
 cd geshixiugai
 
 # 创建虚拟环境
