feat: 创建独立预览页面，将预览功能从主页面分离
- 新增 frontend/preview.html 独立预览页面
- 修改 frontend/index.html，将预览按钮改为链接跳转
- 预览页面支持自动检测支付状态
- 优化预览页面的错误处理和用户体验
- 支持响应式设计，适配移动端

--- a/腾讯优量汇集成方案.md
+++ b/腾讯优量汇集成方案.md
@@ -56,10 +56,19 @@
 
 **重要**：您当前注册的是广告主账户（73845359），需要另外注册**媒体主账户**。
 
-1. **访问媒体主注册页面**：
-   - 方式1：https://e.qq.com/ads/ （选择"媒体主"或"网站主"）
-   - 方式2：https://union.qq.com/ （腾讯广告联盟）
-   - 方式3：在 e.qq.com 后台，切换到"媒体主"角色
+**⚠️ 重要提示**：如果系统平台下拉菜单只有"Android平台"、"iOS平台"、"Harmony平台"三个选项，说明您当前在**移动应用媒体注册页面**，不是网站媒体注册页面。
+
+**正确的注册入口**：
+
+1. **访问腾讯广告联盟（网站媒体专用）**：
+   - 直接访问：https://union.qq.com/
+   - 或搜索"腾讯广告联盟"（不是"腾讯优量汇"）
+   - 选择"网站主"或"媒体主"注册
+
+2. **如果只能访问 e.qq.com**：
+   - 登录后，在后台顶部或左侧菜单寻找"媒体主"或"网站主"入口
+   - 不要选择"应用媒体"或"移动应用"
+   - 选择"网站媒体"或"Web媒体"
 
 2. **注册媒体主账号**：
    - 使用QQ或微信登录（可以与广告主账户相同账号）
@@ -184,14 +193,63 @@
 
 ---
 
-## 九、下一步操作
+## 九、常见问题
 
-1. ✅ 注册腾讯广告联盟账号
-2. ✅ 创建媒体并提交审核
-3. ✅ 获取广告位ID和代码
-4. ✅ 集成到前端页面
-5. ✅ 测试广告显示
-6. ✅ 正式上线
+### Q1: 系统平台下拉菜单只有 Android/iOS/Harmony，没有 Web 选项？
+
+**原因**：您进入了移动应用媒体注册页面，不是网站媒体注册页面。
+
+**解决方法**：
+1. **访问正确的入口**：
+   - 直接访问：https://union.qq.com/ （腾讯广告联盟，专为网站）
+   - 不要使用 e.qq.com 的应用媒体注册
+
+2. **如果必须使用当前页面**：
+   - 暂时无法注册网站媒体
+   - 建议使用其他广告平台（见下方）
+
+### Q2: 腾讯优量汇是否支持网站？
+
+**答案**：腾讯优量汇主要面向移动应用（App），对网站支持有限。
+
+**建议**：
+- 如果无法找到网站媒体注册入口，考虑使用其他更适合网站的广告平台
+- 推荐：百度联盟、Google AdSense、搜狗联盟等
+
+---
+
+## 十、替代方案：其他网站广告平台
+
+如果腾讯广告联盟无法注册网站媒体，可以考虑：
+
+### 1. 百度联盟（推荐）
+- **官网**：https://union.baidu.com/
+- **特点**：专为网站设计，国内用户多
+- **注册**：需要网站备案（您已有：浙ICP备2025213303号-1）
+- **优势**：审核相对容易，收益稳定
+
+### 2. Google AdSense
+- **官网**：https://www.google.com/adsense/
+- **特点**：全球最大的广告联盟
+- **要求**：需要网站备案（您已有）
+- **优势**：收益较高，但审核较严格
+
+### 3. 搜狗联盟
+- **官网**：https://union.sogou.com/
+- **特点**：适合中文网站
+- **优势**：审核相对容易
+
+---
+
+## 十一、下一步操作
+
+1. ✅ 尝试访问 https://union.qq.com/ 注册网站媒体
+2. ✅ 如果无法注册，考虑使用百度联盟或其他平台
+3. ✅ 创建媒体并提交审核
+4. ✅ 获取广告位ID和代码
+5. ✅ 集成到前端页面
+6. ✅ 测试广告显示
+7. ✅ 正式上线
 
 ---
 
